Adding Brady fixes

--- a/public/index.html
+++ b/public/index.html
@@ -138,7 +138,7 @@
           <div class="card">
             <a href="http://open-emr.org/wiki/index.php/OpenEMR_Demo">
               <div class="card-body">
-                <img class="img-fluid center" src="http://www.open-emr.org//img/monitor.png" alt="Card image cap" height="64" width="64">
+                <img class="img-fluid center" src="http://www.open-emr.org/img/monitor.png" alt="Card image cap" height="64" width="64">
                 <h4 class="card-title">Try Now</h4>
                 <p class="card-text">Login to a fully functioning demo of the latest version of OpenEMR</p>
               </div>
@@ -149,7 +149,7 @@
           <div class="card">
             <a href="http://open-emr.org/wiki/index.php/OpenEMR_Downloads">
               <div class="card-body">
-                <img class="img-fluid center" src="http://www.open-emr.org//img/download-arrow.png" alt="Card image cap" height="64" width="64">
+                <img class="img-fluid center" src="http://www.open-emr.org/img/download-arrow.png" alt="Card image cap" height="64" width="64">
                 <h4 class="card-title">Download a Free Copy</h4>
                 <p class="card-text">Download our latest version for your platform</p>
               </div>
@@ -160,7 +160,7 @@
           <div class="card">
             <a href="/wiki/index.php/Support">
               <div class="card-body">
-                <img class="img-fluid center" src="http://www.open-emr.org//img/info.png" alt="Card image cap" height="64" width="64">
+                <img class="img-fluid center" src="http://www.open-emr.org/img/info.png" alt="Card image cap" height="64" width="64">
                 <h4 class="card-title">Find Support</h4>
                 <p class="card-text">Use our vibrant community to get help with your OpenEMR questions</p>
               </div>
@@ -176,7 +176,7 @@
 <div class="main-content">
   <section class="onc align-items-center">
     <div class="col-xs-12 col-lg-5">
-      <img src="http://www.open-emr.org//img/onc_certification_stacked.png" alt="" style="width:100%">
+      <img src="http://www.open-emr.org/img/onc_certification_stacked.png" alt="" style="width:100%">
     </div>
     <div class="col xs-12 col-lg-7">
       <h1 class="display-4">Leading the way.<br>Meaningful Use 2 certified</h1>
@@ -191,7 +191,7 @@
 
 <div class="parallax-container">
   <div class="parallax">
-    <img src="http://www.open-emr.org//img/stethoscope.jpg">
+    <img src="http://www.open-emr.org/img/stethoscope.jpg">
   </div>
 </div>
 
@@ -202,15 +202,15 @@
       <h1 class="display-4 text-center">A feature-rich solution</h1>
       <p class="lead">
         Our vibrant community of volunteers and contributors have maintained critical OpenEMR features for over a decade. With over
-        <a class="underline" href="http://www.open-emr.org//wiki/index.php/OpenEMR_Features#Multilanguage_Support">30 supported languages</a>,
+        <a class="underline" href="http://www.open-emr.org/wiki/index.php/OpenEMR_Features#Multilanguage_Support">30 supported languages</a>,
         many customizations, and full data ownership, OpenEMR's features shine. On top of this, users in need of
         support can take advantage of our <a class="underline" href="https://community.open-emr.org">volunteer support network</a>
-        as well as over <a class="underline" href="http://www.open-emr.org//wiki/index.php/OpenEMR_Professional_Support">30 vendors in over 10 countries.</a>
+        as well as over <a class="underline" href="http://www.open-emr.org/wiki/index.php/OpenEMR_Professional_Support">30 vendors in over 10 countries.</a>
       </p>
     </div>
     <div class="card-holder">
       <div class="card">
-        <img class="" src="http://www.open-emr.org//img/calendar.svg" alt="Card image cap">
+        <img class="" src="http://www.open-emr.org/img/calendar.svg" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Scheduling</h4>
           <hr>
@@ -224,7 +224,7 @@
     </div>
     <div class="card-holder">
       <div class="card">
-        <img class="" src="http://www.open-emr.org//img/prescription.svg" alt="Card image cap">
+        <img class="" src="http://www.open-emr.org/img/prescription.svg" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">e-Prescribing</h4>
           <hr>
@@ -237,7 +237,7 @@
     </div>
     <div class="card-holder">
       <div class="card">
-        <img class="" src="http://www.open-emr.org//img/invoice.svg" alt="Card image cap">
+        <img class="" src="http://www.open-emr.org/img/invoice.svg" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Medical Billing</h4>
           <hr>
@@ -249,7 +249,7 @@
     </div>
     <div class="card-holder">
       <div class="card">
-        <img class="" src="http://www.open-emr.org//img/medical-report.svg" alt="Card image cap">
+        <img class="" src="http://www.open-emr.org/img/medical-report.svg" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">CMS Reporting</h4>
           <hr>
@@ -262,7 +262,7 @@
     </div>
     <div class="card-holder">
       <div class="card">
-        <img class="" src="http://www.open-emr.org//img/vaccine.svg" alt="Card image cap">
+        <img class="" src="http://www.open-emr.org/img/vaccine.svg" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Lab Integration</h4>
           <hr>
@@ -276,7 +276,7 @@
     </div>
     <div class="card-holder">
       <div class="card">
-        <img class="" src="http://www.open-emr.org//img/flowchart.svg" alt="Card image cap">
+        <img class="" src="http://www.open-emr.org/img/flowchart.svg" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Clinical Decision Rules</h4>
           <hr>
@@ -290,7 +290,7 @@
     </div>
     <div class="card-holder">
       <div class="card">
-        <img class="" src="http://www.open-emr.org//img/padlock.svg" alt="Card image cap">
+        <img class="" src="http://www.open-emr.org/img/padlock.svg" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Advanced Security</h4>
           <hr>
@@ -304,7 +304,7 @@
     </div>
     <div class="card-holder">
       <div class="card">
-        <img class="" src="http://www.open-emr.org//img/earth.svg" alt="Card image cap">
+        <img class="" src="http://www.open-emr.org/img/earth.svg" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Multilingual Support</h4>
           <hr>
@@ -320,7 +320,7 @@
 
 <div class="parallax-container">
   <div class="parallax">
-    <img src="http://www.open-emr.org//img/hospital.jpg">
+    <img src="http://www.open-emr.org/img/hospital.jpg">
   </div>
 </div>
 
@@ -332,20 +332,20 @@
   </section>
   <section class="highlighted-users">
     <div class="col">
-      <img src="http://www.open-emr.org//img/IPPF-full-logo.png" alt="" height="70" class="">
+      <img src="http://www.open-emr.org/img/IPPF-full-logo.png" alt="" height="70" class="">
     </div>
     <div class="col">
-      <img src="http://www.open-emr.org//img/peace-corps.png" alt="" height="70" class="">
+      <img src="http://www.open-emr.org/img/peace-corps.png" alt="" height="70" class="">
     </div>
     <div class="col">
-      <img src="http://www.open-emr.org//img/siaya-district-hospital.jpg" alt="" height="70" class="">
+      <img src="http://www.open-emr.org/img/siaya-district-hospital.jpg" alt="" height="70" class="">
     </div>
   </section>
 </div>
 
 <div class="parallax-container">
   <div class="parallax">
-    <img src="http://www.open-emr.org//img/md-with-ipad.jpg" alt="">
+    <img src="http://www.open-emr.org/img/md-with-ipad.jpg" alt="">
   </div>
 </div>
 
@@ -373,19 +373,19 @@ to user needs and setting our priorities to be consistent with the requests of o
 
 <div class="parallax-container">
   <div class="parallax">
-    <img src="http://www.open-emr.org//img/screen.jpg" alt="">
+    <img src="http://www.open-emr.org/img/screen.jpg" alt="">
   </div>
 </div>
 
 <div class="main-content">
   <section class="deploy">
     <div class="col text-center">
-      <img src="http://www.open-emr.org//img/server.svg" alt="" height="128">
+      <img src="http://www.open-emr.org/img/server.svg" alt="" height="128">
       <h2 class="display-4">On-Premise</h2>
       <p>Run OpenEMR on your own servers on location</p>
     </div>
     <div class="col text-center">
-      <img src="http://www.open-emr.org//img/cloud.svg" alt="" height="128">
+      <img src="http://www.open-emr.org/img/cloud.svg" alt="" height="128">
       <h2 class="display-4">Cloud-based</h2>
       <p>Deploy OpenEMR to the cloud</p>
     </div>
@@ -399,7 +399,7 @@ to user needs and setting our priorities to be consistent with the requests of o
       </p>
     </div>
     <div class="col text-center">
-      <img src="http://www.open-emr.org//img/osi-certified.png" alt="" class="img-fluid">
+      <img src="http://www.open-emr.org/img/osi-certified.png" alt="" class="img-fluid">
     </div>
   </section>
 </div>
