Fixing up the demo page

--- a/public/demo/index.html
+++ b/public/demo/index.html
@@ -90,7 +90,7 @@
     
 <div style="margin-top: 98px">
   
-  <div class="container">
+  <div class="container page">
     <div class="row">
       <div class="col-xs-12 col-md-8 offset-md-2">
         <p>
@@ -99,7 +99,11 @@
 
 <p>We offer 3 fully functional demo installations for you to try out. Some simple configuration has been added for clearer demonstration of OpenEMR, medical billing, accounting, access controls and patient portals. Each demo is reset overnight (PST) so no data is persistent. Note there are 3 identical demos (&lsquo;Main&rsquo;, &lsquo;Alternate&rsquo;, &lsquo;Another Alternate&rsquo;) offered in case a demo is down or has been modified. We also offer a <a href="http://www.open-emr.org/wiki/index.php/Development_5.0.0_Demo">OpenEMR 5.0.0 demo with the most recent patch and a full panel of Development Demos</a> (these are demos that are rebuilt daily from most recent development code) where you can test out new features.</p>
 
-<h2 id="credentials">Credentials</h2>
+<hr />
+
+<h2 id="openemr-demo">OpenEMR Demo</h2>
+
+<h3 id="credentials">Credentials</h3>
 
 <table>
 <thead>
@@ -143,9 +147,7 @@
 </tbody>
 </table>
 
-<hr />
-
-<h2 id="main-demo-link">Main Demo Link</h2>
+<h3 id="links">Links</h3>
 
 <table>
 <thead>
@@ -175,13 +177,68 @@
 
 <hr />
 
+<h2 id="patient-portal-demo">Patient Portal Demo</h2>
+
+<h3 id="credentials-1">Credentials</h3>
+
+<table>
+<thead>
+<tr>
+<th>Patient Username</th>
+<th>Password</th>
+</tr>
+</thead>
+
+<tbody>
+<tr>
+<td>Phil1</td>
+<td>phil</td>
+</tr>
+
+<tr>
+<td>Susan2</td>
+<td>susan</td>
+</tr>
+</tbody>
+</table>
+
+<h3 id="links-1">Links</h3>
+
+<table>
+<thead>
+<tr>
+<th></th>
+<th></th>
+</tr>
+</thead>
+
+<tbody>
+<tr>
+<td>OpenEMR 5.0.0 Patient Portal Demo</td>
+<td><a href="https://demo.openemr.io/openemr/patients">https://demo.openemr.io/openemr/patients</a></td>
+</tr>
+
+<tr>
+<td>Alternate Demo</td>
+<td><a href="https://demo.openemr.io/a/openemr/patients">https://demo.openemr.io/a/openemr/patients</a></td>
+</tr>
+
+<tr>
+<td>Another Alternate Demo</td>
+<td><a href="https://demo.openemr.io/b/openemr/patients">https://demo.openemr.io/b/openemr/patients</a></td>
+</tr>
+</tbody>
+</table>
+
+<hr />
+
 <h2 id="wordpress-patient-portal-demo">Wordpress Patient Portal Demo</h2>
 
-<p><strong>Login/Password</strong></p>
+<h3 id="credentials-2">Credentials</h3>
 
 <p>Not needed. You can register an account to test it.</p>
 
-<p><strong>Wordpress Patient Portal Link</strong></p>
+<h3 id="links-2">Links</h3>
 
 <table>
 <thead>
@@ -208,15 +265,6 @@
 </tr>
 </tbody>
 </table>
-
-<hr />
-
-<h4 id="demo-maintainer">Demo Maintainer</h4>
-
-<p>Brady Miller<br />
-OpenEMR Project Co-administrator<br />
-brady.g.miller@gmail.com<br />
-<a href="http://www.bradymd.com">http://www.bradymd.com</a></p>
 </p>
       </div>
     </div>
@@ -225,6 +273,10 @@ brady.g.miller@gmail.com<br />
 <style type="text/css">
   table tr td {
     padding: 2px 8px;
+  }
+  table tr td,
+  table tr th {
+    padding-right: 15px;
   }
   table tr td:first-child {
     text-align: right;
