Getting the public folder up to date with demo and YIR

--- a/public/year-in-review/index.html
+++ b/public/year-in-review/index.html
@@ -3,7 +3,7 @@
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>Year in Review</title>
-<meta name="description" content="Open source electronic medical record software">
+<meta name="description" content="The world&#39;s leading open-source electronic medical record and practice management software.">
 <meta name="HandheldFriendly" content="True">
 <meta name="MobileOptimized" content="320">
 <meta name="robots" content="index,follow">
@@ -13,7 +13,7 @@
   <meta property="twitter:creator" content="@openemr">
   <meta property="fb:app_id" content="291996261297487">
   <meta property="og:title" content="Year in Review">
-  <meta property="og:description" content="Open source electronic medical record software">
+  <meta property="og:description" content="The world&#39;s leading open-source electronic medical record and practice management software.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="http://www.open-emr.org/year-in-review/">
 <link rel="stylesheet" href="http://www.open-emr.org/style.css?v=24">
@@ -45,7 +45,7 @@
     <div id="navbarSupportedContent">
       <ul>
         <li class="site-nav-item"><a class="nav-link" href="http://open-emr.org/wiki/index.php/OpenEMR_Features">Features</a></li>
-        <li class="site-nav-item"><a class="nav-link" href="http://open-emr.org/wiki/index.php/OpenEMR_Demo">Demo</a></li>
+        <li class="site-nav-item"><a class="nav-link" href="http://www.open-emr.org/demo">Demo</a></li>
         <li class="site-nav-item"><a class="nav-link" href="http://open-emr.org/wiki/index.php/OpenEMR_Downloads">Downloads</a></li>
         <li class="site-nav-item"><a class="nav-link" href="http://open-emr.org/wiki">Wiki</a></li>
         <li class="site-nav-item"><a class="nav-link" href="https://community.open-emr.org/">Forum</a></li>
