fixed demo link in footer

--- a/public/year-in-review/index.html
+++ b/public/year-in-review/index.html
@@ -288,7 +288,7 @@ window.addEventListener("load", function(){
         <h5 class="title nowiki">Main Project Links</h5>
         <ul class="list-unstyled">
           <li><a href="/wiki/index.php/OpenEMR_Features">Features</a></li>
-          <li><a href="/wiki/index.php/OpenEMR_Demo">Demo</a></li>
+          <li><a href="/demo">Demo</a></li>
           <li><a href="/wiki/index.php/OpenEMR_Downloads">Download</a></li>
           <li><a href="/wiki">Wiki</a></li>
           <li><a href="https://community.open-emr.org/">Forum</a></li>
