--- a/public/index.html
+++ b/public/index.html
@@ -393,7 +393,7 @@ to user needs and setting our priorities to be consistent with the requests of o
         <h5 class="title nowiki">Main Project Links</h5>
         <ul class="list-unstyled">
           <li><a href="/wiki/index.php/OpenEMR_Features">Features</a></li>
-          <li><a href="/wiki/index.php/OpenEMR_Demo">Demo</a></li>
+          <li><a href="/demo">Demo</a></li>
           <li><a href="/wiki/index.php/OpenEMR_Downloads">Download</a></li>
           <li><a href="/wiki">Wiki</a></li>
           <li><a href="https://community.open-emr.org/">Forum</a></li>
