added Privacy Policy link and also added explicit copyright

--- a/public/demo/index.html
+++ b/public/demo/index.html
@@ -355,6 +355,8 @@
   <div class="row">
     <div class="col text-center">
       <small>
+        <a href="//www.iubenda.com/privacy-policy/54578274" class="iubenda-nostyle no-brand iubenda-embed" title="Privacy Policy">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "//cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script> | Copyright 2018 OEMR
+        <br>
         Many of the icons used on the homepage are from
         <a href="https://www.flaticon.com">www.flaticon.com</a> and are licensed
         by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>.
