added blog link to footer

--- a/public/privacy/index.html
+++ b/public/privacy/index.html
@@ -118,6 +118,7 @@
           <li><a href="/wiki/index.php/OpenEMR_Features">Features</a></li>
           <li><a href="/demo">Demo</a></li>
           <li><a href="/wiki/index.php/OpenEMR_Downloads">Download</a></li>
+          <li><a href="/blog">Blog</a></li>
           <li><a href="/wiki">Wiki</a></li>
           <li><a href="https://community.open-emr.org/">Forum</a></li>
           <li><a href="/wiki/index.php/OpenEMR_Support_Guide">Support</a></li>
@@ -183,8 +184,6 @@
         <br>
         Icon authors include:
         <a href="https://www.flaticon.com/authors/madebyoliver" title="Madebyoliver">Madebyoliver</a>,
-        <a href="https://www.flaticon.com/authors/those-icons" title="Those Icons">Those Icons</a>,
-        <a href="https://www.flaticon.com/authors/linh-pham" title="Linh Pham">Linh Pham</a>,
         <a href="http://www.freepik.com" title="Freepik">Freepik</a>,
         <a href="https://www.flaticon.com/authors/those-icons" title="Those Icons">Those Icons</a>,
         <a href="https://www.flaticon.com/authors/linh-pham" title="Linh Pham">Linh Pham</a>,
