make website more og friendly

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
 <meta name="MobileOptimized" content="320">
 <meta name="robots" content="index,follow">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="twitter:card" content="summary">
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:image" content="https://www.open-emr.org/img/full_mark.png">
+  <meta property="og:image" content="https://www.open-emr.org/img/full_mark.png">
   <meta property="twitter:site" content="https://twitter.com/openemr">
   <meta property="twitter:creator" content="@openemr">
   <meta property="fb:app_id" content="291996261297487">
