--- a/public/year-in-review/index.html
+++ b/public/year-in-review/index.html
@@ -2,17 +2,19 @@
 <html prefix="og: http://ogp.me/ns#"  lang="en">
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>Year in Review</title>
+<title>OpenEMR 2017 Year in Review</title>
 <meta name="description" content="The world&#39;s leading open-source electronic medical record and practice management software.">
 <meta name="HandheldFriendly" content="True">
 <meta name="MobileOptimized" content="320">
 <meta name="robots" content="index,follow">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="twitter:card" content="summary">
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:image" content="https://www.open-emr.org/year-in-review/year_in_review.png">
+  <meta property="og:image" content="https://www.open-emr.org/year-in-review/year_in_review.png">
   <meta property="twitter:site" content="https://twitter.com/openemr">
   <meta property="twitter:creator" content="@openemr">
   <meta property="fb:app_id" content="291996261297487">
-  <meta property="og:title" content="Year in Review">
+  <meta property="og:title" content="OpenEMR 2017 Year in Review">
   <meta property="og:description" content="The world&#39;s leading open-source electronic medical record and practice management software.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.open-emr.org/year-in-review/">
