--- a/public/demo/index.html
+++ b/public/demo/index.html
@@ -221,17 +221,17 @@
 <tbody>
 <tr>
 <td>OpenEMR 5.0.1 Portal Demo</td>
-<td><a href="https://demo.openemr.io/c/openemr/portal/index.php">https://demo.openemr.io/c/openemr/patients</a></td>
+<td><a href="https://demo.openemr.io/c/openemr/portal/index.php">https://demo.openemr.io/c/openemr/portal</a></td>
 </tr>
 
 <tr>
 <td>Alternate Demo</td>
-<td><a href="https://demo.openemr.io/d/openemr/portal/index.php">https://demo.openemr.io/d/openemr/patients</a></td>
+<td><a href="https://demo.openemr.io/d/openemr/portal/index.php">https://demo.openemr.io/d/openemr/portal</a></td>
 </tr>
 
 <tr>
 <td>Another Alternate Demo</td>
-<td><a href="https://demo.openemr.io/e/openemr/portal/index.php">https://demo.openemr.io/e/openemr/patients</a></td>
+<td><a href="https://demo.openemr.io/e/openemr/portal/index.php">https://demo.openemr.io/e/openemr/portal</a></td>
 </tr>
 </tbody>
 </table>
