hugo run for prior commit

--- a/public/demo/index.html
+++ b/public/demo/index.html
@@ -20,16 +20,16 @@
   <meta property="og:url" content="https://www.open-emr.org/demo/">
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://www.open-emr.org/style.css?v=27"><link href="https://www.open-emr.org/demo/index.xml" rel="alternate" type="application/rss+xml"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=vMO5ypXxXd">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=vMO5ypXxXd">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=vMO5ypXxXd">
-<link rel="manifest" href="/manifest.json?v=vMO5ypXxXd">
-<link rel="mask-icon" href="/safari-pinned-tab.svg?v=vMO5ypXxXd" color="#2d9bd6">
-<link rel="shortcut icon" href="/favicon.ico?v=vMO5ypXxXd">
+<link rel="stylesheet" href="https://www.open-emr.org/style.css?v=27"><link href="https://www.open-emr.org/demo/index.xml" rel="alternate" type="application/rss+xml"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=pgq70jawxe">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=pgq70jawxe">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=pgq70jawxe">
+<link rel="manifest" href="/site.webmanifest?v=pgq70jawxe">
+<link rel="mask-icon" href="/safari-pinned-tab.svg?v=pgq70jawxe" color="#2e9bd6">
+<link rel="shortcut icon" href="/favicon.ico?v=pgq70jawxe">
 <meta name="apple-mobile-web-app-title" content="OpenEMR">
 <meta name="application-name" content="OpenEMR">
-<meta name="msapplication-TileColor" content="#2d9bd6">
-<meta name="msapplication-TileImage" content="/mstile-144x144.png?v=vMO5ypXxXd">
+<meta name="msapplication-TileColor" content="#2d89ef">
+<meta name="msapplication-TileImage" content="/mstile-144x144.png?v=pgq70jawxe">
 <meta name="theme-color" content="#2d9bd6">
 <script src="https://www.open-emr.org/bundle.js"></script>
 </head>
