Updated homepage, minified CSS

--- a/public/year-in-review/index.html
+++ b/public/year-in-review/index.html
@@ -21,7 +21,7 @@
 <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,400i,700,700i|IBM+Plex+Sans+Condensed|IBM+Plex+Sans:200,200i,300,300i,400,400i,500,500i,700,700i" rel="stylesheet"> 
 <link href="https://www.open-emr.org/fonts/cooper_hewitt/cooper_hewitt.css" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://www.open-emr.org/style.css?v=G6iPNTDY"><link href="https://www.open-emr.org/year-in-review/index.xml" rel="alternate" type="application/rss+xml"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=pgq70jawxe">
+<link rel="stylesheet" href="https://www.open-emr.org/main.a0e02fafabf9cee63bdb.css"><link href="https://www.open-emr.org/year-in-review/index.xml" rel="alternate" type="application/rss+xml"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=pgq70jawxe">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=pgq70jawxe">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=pgq70jawxe">
 <link rel="manifest" href="/site.webmanifest?v=pgq70jawxe">
@@ -34,7 +34,7 @@
 <meta name="msapplication-TileImage" content="/mstile-144x144.png?v=pgq70jawxe">
 <meta name="theme-color" content="#2d9bd6">
 
-<script src="https://www.open-emr.org/bundle.js"></script>
+<script src="https://www.open-emr.org/main.js"></script>
 </head>
     <body>
         <nav class="main-header " id="main-navigation">
@@ -281,7 +281,7 @@ window.addEventListener("load", function(){
           <span class="sr-only">OpenEMR</span>
         </a>
       </div>
-      <div class="col-xs-12 col-sm-4 col-md-3">
+      <div class="col-xs-12 col-sm-4 col-md-2">
         <h5 class="title nowiki">Main Project Links</h5>
         <ul class="list-unstyled">
           <li><a href="/wiki/index.php/OpenEMR_Features">Features</a></li>
@@ -293,7 +293,7 @@ window.addEventListener("load", function(){
           <li><a href="/wiki/index.php/OpenEMR_Support_Guide">Support</a></li>
         </ul>
       </div>
-      <div class="col-xs-12 col-sm-4 col-md-3">
+      <div class="col-xs-12 col-sm-4 col-md-2">
         <h5 class="title nowiki">Help & Support Links</h5>
         <ul class="list-unstyled">
           <li><a href="/wiki/index.php/FAQ">FAQs</a></li>
@@ -305,7 +305,7 @@ window.addEventListener("load", function(){
           <li><a href="/wiki/index.php/OpenEMR_Acknowledgments">Acknowledgements</a></li>
         </ul>
       </div>
-      <div class="col-xs-12 col-sm-4 col-md-3">
+      <div class="col-xs-12 col-sm-4 col-md-2">
         
         
         <h5 class="title nowiki">Developer Links</h5>
@@ -344,12 +344,11 @@ window.addEventListener("load", function(){
   </div>
   <div class="row">
     <div class="col text-center">
-      <small>
+      <p>
+      <small style="line-height: 1em;">
         <a href="//www.iubenda.com/privacy-policy/54578274" class="iubenda-nostyle no-brand iubenda-embed" title="Privacy Policy">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "//cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script> | Copyright 2018 OEMR
         <br>
-        Many of the icons used on the homepage are from
-        <a href="https://www.flaticon.com">www.flaticon.com</a> and are licensed
-        by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>.
+        Many of the icons used on the homepage are from <a href="https://www.flaticon.com">www.flaticon.com</a> and are licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>.
         <br>
         Icon authors include:
         <a href="https://www.flaticon.com/authors/madebyoliver" title="Madebyoliver">Madebyoliver</a>,
@@ -359,6 +358,7 @@ window.addEventListener("load", function(){
         <a href="https://www.flaticon.com/authors/anhgreen" title="AnhGreen">AnhGreen</a>,
         <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a>
       </small>
+      </p>
     </div>
   </div>
 </div>
