Fixing the white text on white background problem on blog

--- a/public/privacy/index.html
+++ b/public/privacy/index.html
@@ -23,7 +23,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
-<link rel="stylesheet" href="https://www.open-emr.org/style.min.54462b7d430e4e288f4acf0f0d49111ca5ea7e8dc18783f41eb6ce516ac1e1d2.css" integrity="sha256-VEYrfUMOTiiPSs8PDUkRHKXqfo3Bh4P0HrbOUWrB4dI="><link href="https://www.open-emr.org/privacy/index.xml" rel="alternate" type="application/rss+xml"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=pgq70jawxe">
+<link rel="stylesheet" href="https://www.open-emr.org/style.min.7cf428dcf16d654b66ab45b853b9d7d2e1269f9a21aebbb907ee41035365dc45.css" integrity="sha256-fPQo3PFtZUtmq0W4U7nX0uEmn5ohrru5B&#43;5BA1Nl3EU="><link href="https://www.open-emr.org/privacy/index.xml" rel="alternate" type="application/rss+xml"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=pgq70jawxe">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=pgq70jawxe">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=pgq70jawxe">
 <link rel="manifest" href="/site.webmanifest?v=pgq70jawxe">
